--- a/CSS_stylesheet.css
+++ b/CSS_stylesheet.css
@@ -160,3 +160,17 @@ html, body {
 .clue_area{
     height: 6vw;
 }
+.answers_container{
+    width: 40vw;
+    height: 40vw;
+    display: none;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    justify-self: center;
+}
+.answers_column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
