--- a/CSS_stylesheet.css
+++ b/CSS_stylesheet.css
@@ -174,3 +174,11 @@ html, body {
     flex-direction: column;
     align-items: center;
 }
+.generate_button{
+    width: 13vw;
+    border: 1px solid black;
+    padding: 0.5vw 1vw;
+    border-radius: 5%;
+    font-size: 2vw;
+    font-weight: bold;
+}
