--- a/CSS_stylesheet.css
+++ b/CSS_stylesheet.css
@@ -182,3 +182,81 @@ html, body {
     font-size: 2vw;
     font-weight: bold;
 }
+.page_button_container{
+    display: flex;
+    width: 100%;
+    height: 30vw;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+.button_image_container{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.history_button_div{
+    display: flex;
+    width: 100%;
+    max-height: 20vw;
+    justify-content: center;
+    align-items: center;
+}
+.history_button{
+    width: 21vw;
+    border: 1px solid black;
+    padding: 0.5vw 1vw;
+    border-radius: 5%;
+    font-size: 2vw;
+    font-weight: bold;
+}
+.history_clue_button{
+    width: 25vw;
+    border: 1px solid black;
+    padding: 0.5vw 1vw;
+    border-radius: 5%;
+    font-size: 2vw;
+    font-weight: bold;
+}
+.history_image_div{
+    display: flex;
+    width: 100%;
+    max-height: 35vw;
+    justify-content: center;
+    align-items: center;
+}
+.clue_history_div{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.full_clue_container{
+    width: 100%;
+    max-height: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.clue_container{
+    width: 100%;
+    max-height: 6vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    justify-self: center;
+}
+.answer_column_container{
+    width: 100%;
+    max-height: 40vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
